# Smart-Pointers-usage-in-polymorphism

./: CMakeLists.txt  CmakeLists.txt  README.md  main.cpp
.github/workflows/: github-actions-demo.yml
src/: CMakeLists.txt  Composite.cpp  Composite.hpp
tests/: CMakeLists.txt
tests/smarttests/: CMakeLists.txt  general_tests.cpp
